<resources>
    <string name="app_name">JKL Beta v0.9</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="ipaddress_message">IP Address (Server)</string>
    <string name="port_message">Port ###</string>
    <string name="status_text">Status :</string>
    <string name="button_list">List</string>
    <string name="button_scan"></string>
</resources>
